.metadata/.plugins/org.eclipse.cdt.ui/bms_v2.build.log
14:41:53 **** Incremental Build of configuration Debug for project bms_v2 ****
make -j16 all 
docker pull microros/micro_ros_static_library_builder:foxy && docker run --rm -v /home/frank/STM32CubeIDE/workspace_1.14.0/bms_v2:/project --env MICROROS_LIBRARY_FOLDER=micro_ros_stm32cubemx_utils/microros_static_library_ide microros/micro_ros_static_library_builder:foxy
foxy: Pulling from microros/micro_ros_static_library_builder
Digest: sha256:bda0dcca059534cfc39f1fb2744bf58807acb8c6215a33f17fed2a9af15501a7
Status: Image is up to date for microros/micro_ros_static_library_builder:foxy
docker.io/microros/micro_ros_static_library_builder:foxy
dos2unix: converting file /project/micro_ros_stm32cubemx_utils/microros_static_library_ide/library_generation/library_generation.sh to Unix format...
micro-ROS library found. Skipping...
Delete micro_ros_stm32cubemx_utils/microros_static_library_ide/libmicroros/ for rebuild.
 
arm-none-eabi-gcc "../Core/Src/dma_transport.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I"/home/frank/STM32CubeIDE/workspace_1.14.0/bms_v2/micro_ros_stm32cubemx_utils/microros_static_library_ide/libmicroros/include" -I"/home/frank/STM32CubeIDE/workspace_1.14.0/bms_v2/ThirdParty/FreeRTOS" -I"/home/frank/STM32CubeIDE/workspace_1.14.0/bms_v2/ThirdParty/FreeRTOS/include" -I"/home/frank/STM32CubeIDE/workspace_1.14.0/bms_v2/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I/home/frank/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/STM32F4xx_HAL_Driver/Inc -I/home/frank/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I/home/frank/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Device/ST/STM32F4xx/Include -I/home/frank/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/dma_transport.d" -MT"Core/Src/dma_transport.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/dma_transport.o"
arm-none-eabi-gcc "../Core/Src/microros_allocators.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I"/home/frank/STM32CubeIDE/workspace_1.14.0/bms_v2/micro_ros_stm32cubemx_utils/microros_static_library_ide/libmicroros/include" -I"/home/frank/STM32CubeIDE/workspace_1.14.0/bms_v2/ThirdParty/FreeRTOS" -I"/home/frank/STM32CubeIDE/workspace_1.14.0/bms_v2/ThirdParty/FreeRTOS/include" -I"/home/frank/STM32CubeIDE/workspace_1.14.0/bms_v2/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I/home/frank/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/STM32F4xx_HAL_Driver/Inc -I/home/frank/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I/home/frank/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Device/ST/STM32F4xx/Include -I/home/frank/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/microros_allocators.d" -MT"Core/Src/microros_allocators.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/microros_allocators.o"
arm-none-eabi-gcc "../Core/Src/microros_time.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I"/home/frank/STM32CubeIDE/workspace_1.14.0/bms_v2/micro_ros_stm32cubemx_utils/microros_static_library_ide/libmicroros/include" -I"/home/frank/STM32CubeIDE/workspace_1.14.0/bms_v2/ThirdParty/FreeRTOS" -I"/home/frank/STM32CubeIDE/workspace_1.14.0/bms_v2/ThirdParty/FreeRTOS/include" -I"/home/frank/STM32CubeIDE/workspace_1.14.0/bms_v2/ThirdParty/FreeRTOS/portable/GCC/ARM_CM4F" -I/home/frank/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/STM32F4xx_HAL_Driver/Inc -I/home/frank/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I/home/frank/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Device/ST/STM32F4xx/Include -I/home/frank/STM32Cube/Repository/STM32Cube_FW_F4_V1.28.0/Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/microros_time.d" -MT"Core/Src/microros_time.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/microros_time.o"
../Core/Src/microros_allocators.c:3:10: fatal error: cmsis_os.h: No such file or directory
    3 | #include "cmsis_os.h"
      |          ^~~~~~~~~~~~
compilation terminated.
make[1]: *** [Core/Src/subdir.mk:46: Core/Src/microros_allocators.o] Error 1
make[1]: *** Waiting for unfinished jobs....
../Core/Src/microros_time.c: In function 'clock_gettime':
../Core/Src/microros_time.c:32:5: error: unknown type name 'TimeOut_t'; did you mean 'timer_t'?
   32 |     TimeOut_t xCurrentTime = { 0 };
      |     ^~~~~~~~~
      |     timer_t
../Core/Src/microros_time.c:44:5: warning: implicit declaration of function 'vTaskSetTimeOutState' [-Wimplicit-function-declaration]
   44 |     vTaskSetTimeOutState( &xCurrentTime );
      |     ^~~~~~~~~~~~~~~~~~~~
../Core/Src/microros_time.c:48:47: error: request for member 'xOverflowCount' in something not a structure or union
   48 |     ullTickCount = ( uint64_t ) ( xCurrentTime.xOverflowCount ) << ( sizeof( TickType_t ) * 8 );
      |                                               ^
../Core/Src/microros_time.c:48:78: error: 'TickType_t' undeclared (first use in this function)
   48 |     ullTickCount = ( uint64_t ) ( xCurrentTime.xOverflowCount ) << ( sizeof( TickType_t ) * 8 );
      |                                                                              ^~~~~~~~~~
../Core/Src/microros_time.c:48:78: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/microros_time.c:51:33: error: request for member 'xTimeOnEntering' in something not a structure or union
   51 |     ullTickCount += xCurrentTime.xTimeOnEntering;
      |                                 ^
../Core/Src/microros_time.c:7:63: error: 'configTICK_RATE_HZ' undeclared (first use in this function)
    7 | #define NANOSECONDS_PER_TICK       ( NANOSECONDS_PER_SECOND / configTICK_RATE_HZ ) /**< Nanoseconds per FreeRTOS tick. */
      |                                                               ^~~~~~~~~~~~~~~~~~
../Core/Src/microros_time.c:54:61: note: in expansion of macro 'NANOSECONDS_PER_TICK'
   54 |     UTILS_NanosecondsToTimespec( ( int64_t ) ullTickCount * NANOSECONDS_PER_TICK, tp );
      |                                                             ^~~~~~~~~~~~~~~~~~~~
make[1]: *** [Core/Src/subdir.mk:46: Core/Src/microros_time.o] Error 1
../Core/Src/dma_transport.c:6:10: fatal error: cmsis_os.h: No such file or directory
    6 | #include "cmsis_os.h"
      |          ^~~~~~~~~~~~
compilation terminated.
make[1]: *** [Core/Src/subdir.mk:46: Core/Src/dma_transport.o] Error 1
make: *** [makefile:61: all] Error 2
"make -j16 all" terminated with exit code 2. Build might be incomplete.

14:41:55 Build Failed. 12 errors, 1 warnings. (took 1s.932ms)

